variout style fixes
- increase the height of the bubble-input a bit
- fix the issue of inconsistent height changes when
only one full-width input is present
- fix fade effect not being properly hidden by an overlay
when popup appears
- remove margin on buttons set in _buttons.scss which
messes up positioning in bottom area and accept btn
- fix overflowing description of an item in list mode
regression
- rework itemDetails popup to use flexbox instead of grid
to have better control of the spacing
- increase spacing in itemDetails between main areas to 12x
- remove unnecessary hardcoded width in settings popup
- properly resize window when progressbar appears to
only show the progress indicator

--- a/scss/components/_citationDialog.scss
+++ b/scss/components/_citationDialog.scss
@@ -29,6 +29,7 @@
 		background-size: 60% !important;
 		background-repeat: no-repeat;
 		border-radius: 5px;
+		margin: 0;
 		&:hover:not([disabled]) {
 			cursor: pointer;
 			background-color: var(--fill-quinary) !important;
@@ -46,7 +47,7 @@
 	}
 
 	#search-row {
-		margin: 5px 8px 5px 0;
+		margin: 6px 8px 6px 0;
 
 		#z-icon-container {
 			width: 36px; // same as left margin on .library-other-items
@@ -130,7 +131,7 @@
 					width: 20px;
 					height: 100%;
 					pointer-events: none;
-					z-index: 1000; 
+					z-index: 100; 
 				}
 				&::before {
 					left: 0;
@@ -432,6 +433,8 @@
 						// Needed to have empty item row description to still occupy height
 						white-space: pre;
 						margin-inline-start: 20px;
+						overflow: hidden;
+  						text-overflow: ellipsis;
 					}
 					.title {
 						overflow: hidden;
@@ -520,8 +523,7 @@
 		panel {
 			padding: 0;
 			.popup {
-				padding: 15px;
-
+				padding: 16px;
 			}
 		}
 		.overlay {
@@ -530,11 +532,11 @@
 			width: 100%;
 			height: 100%;
 			background-color: rgba(0, 0, 0, 0.1);
+			z-index: 1000;
 		}
 		#settings-popup {
 			top: 35px;
 			right: 5px;
-			width: 200px;
 
 			.title {
 				font-size: 13px;
@@ -543,9 +545,8 @@
 			}
 		}
 		#itemDetails {
+			width: 400px;
 			.popup {
-				width: 400px;
-
 				.details-header {
 					.icon {
 						margin-inline-end: 5px;
@@ -554,19 +555,33 @@
 					}
 				}
 				.details {
-					display: grid;
-					align-items: center;
-					grid-template-columns: max-content 1fr;
-					.details-label {
-						margin-top: auto;
-						margin-bottom: auto;
-						width: min-content;
-						margin-inline-start: auto;
+					height: 120px;
+					margin: 12px 0;
+					display: flex;
+					flex-direction: column;
+					justify-content: space-between;
+
+					.row {
+						display: flex;
+						flex-direction: row;
+						align-items: center;
+						justify-content: end;
+					}
+					.details-data {
+						@include focus-ring;
+						margin-inline-end: 0;
+						padding-inline-start: 5px;
+						border-radius: 5px;
+						border: none;
+						box-shadow: 0px 0.5px 2.5px 0px rgba(0, 0, 0, 0.3);
+						width: 260px;
 					}
 					#suppress-author-row {
-						margin-bottom: 5px;
+						justify-content: start;
+						padding-inline-start: 100px;
 					}
 					#label {
+						flex: 1;
 						@media (-moz-platform: macos) {
 							height: 22px;
 						}
